<resources>
    <string name="app_name">Play It</string>
    <string name="tv_show">Tv Show</string>
    <string name="movies">Movies</string>
    <string name="item_name">Item Name</string>
    <string name="item_date">Item Date</string>
    <string name="image_poster">Image Poster</string>
    <string name="_10">10</string>
    <string name="_13">13</string>
    <string name="_18">18</string>
    <string name="plus">+</string>
    <string name="_15_november_2019">15 November 2019</string>
    <string name="synopsis">Synopsis</string>
    <string name="item_description">Description</string>

    <string name="movie_toolbar_title">Movie Catalog</string>
    <string name="tv_toolbar_title">Tv Show Catalog</string>

    <string name="movie_detail">Movie Detail</string>
    <string name="tv_detail">Tv Show Detail</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="hmmm">Hmmm . . .</string>
    <string name="there_is_nothing_in_here">There is nothing here</string>
    <string name="empty">Empty</string>

</resources>
