<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/favorite"
            app:titleTextColor="@android:color/white" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_movie_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movies" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ti_tv_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_show" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
