<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/size_8">

        <LinearLayout
            android:layout_width="@dimen/size_200"
            android:layout_height="@dimen/size_300">

            <ImageView
                android:id="@+id/iv_item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_poster"
                android:scaleType="centerCrop"
                android:src="@drawable/place_holder" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_8"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:text="@string/item_name"
        android:textSize="@dimen/text_size_22"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_date"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

</LinearLayout>