<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_172"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/item_name"
                android:textSize="@dimen/text_size_22"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail">

                <RatingBar
                    android:id="@+id/rb_detail"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:numStars="5"
                    app:layout_constraintStart_toEndOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/iv_back_drop_detail" />

                <TextView
                    android:id="@+id/tv_rate_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_6"
                    android:text="@string/_10"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/rb_detail"
                    app:layout_constraintTop_toBottomOf="@+id/iv_back_drop_detail" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/size_40"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_16"
                app:cardCornerRadius="@dimen/size_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_4">

                    <TextView
                        android:id="@+id/tv_age_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_18"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_18"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plus"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_18"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_date_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_174"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_80"
                android:text="@string/_15_november_2019"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/size_140"
                android:layout_height="@dimen/size_200"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                app:cardCornerRadius="@dimen/size_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_poster_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/place_holder"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_10"
                android:layout_marginTop="@dimen/margin_16"
                android:background="#E6E6E6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_250"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_10"
                app:cardCornerRadius="@dimen/size_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <ImageView
                    android:id="@+id/iv_back_drop_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/place_holder"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/synopsis"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_26"
                android:layout_marginTop="@dimen/margin_6"
                android:layout_marginEnd="@dimen/margin_26"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/item_description"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>